# plibc

./: .gitignore  LICENSE  meson.build  meson.options
arch/x86_64/: meson.build
arch/x86_64/crt/: crt1.S  crti.S  crtn.S  meson.build
arch/x86_64/libc/: meson.build  start-shared.S  start-static.S
crt/: crt0.S  crt1.S  meson.build
dummy/: meson.build
include/: alloca.h  assert.h  dirent.h  elf.h  errno.h  fcntl.h  fenv.h  grp.h  limits.h  locale.h  math.h  meson.build  pwd.h  setjmp.h  signal.h  stdio.h  stdlib.h  string.h  tar.h  termios.h  time.h  unistd.h  utime.h  wchar.h
include/bits/: FILE.h  __dev_t.h  __gid_t.h  __ino_t.h  __mode_t.h  __nlink_t.h  __off_t.h  __pid_t.h  __sigset_t.h  __time_t.h  __uid_t.h  clock_t.h  features.h  intptr_t.h  off_t.h  ssize_t.h  whence.h
include/sys/: auxv.h  stat.h  times.h  types.h  utsname.h  wait.h
libc/: auxv.c  auxv.h  compiler.h  config-file.c  cxa.c  cxa.h  meson.build  shared-start.c  start-shared.S  start-static.S  start.S  start.c  stub.h
libc/ansi/: assert.c  ctype.c  fenv.S  heap.c  locale.c  printf.c  scanf.c  setjmp.S  setjmp.c  signal.c  stdio.c  stdio.h  stdlib.c  string.c  time.c  wchar.c
libc/ansi/musl-generic-math/: acos.c  acosf.c  acosh.c  acoshf.c  acoshl.c  acosl.c  asinh.c  asinl.c  atan2.c  atan2f.c  atanf.c  atanh.c  atanhl.c  cbrt.c  ceilf.c  copysignf.c  cosf.c  cosh.c  erff.c  erfl.c  exp.c  exp2f.c  expm1.c  fabs.c  fabsl.c  fdimf.c  fdiml.c  floorf.c  floorl.c  fmaf.c  fmal.c  fminf.c  fminl.c  fmod.c  fmodl.c  hypot.c  hypotf.c  ilogbl.c  ldexpl.c  lgamma.c  (+43 more)
libc/assert/: __plibc_assert_fail.c  meson.build
libc/ctype/: isalnum.c  isalpha.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  meson.build  tolower.c  toupper.c
libc/cxa/: __cxa_atexit.c  __cxa_finalize.c  atexits.c  meson.build
libc/dirent/: closedir.c  meson.build  opendir.c  readdir.c  rewinddir.c
libc/dlfcn/: __tls_get_addr.c  dlclose.c  dlerror.c  dlopen.c  dlsym.c  meson.build
libc/errno/: errno.c  meson.build
libc/fcntl/: creat.c  fcntl.c  meson.build  open.c
libc/grp/: get_group_struct.c  get_group_struct_r.c  getgrgid.c  getgrnam.c  group_file.c  meson.build
libc/locale/: localeconv.c  meson.build  setlocale.c
libc/musl-generic-math/: asin.c  asinf.c  asinhf.c  asinhl.c  atan.c  atan2l.c  atanhf.c  atanl.c  cbrtf.c  cbrtl.c  ceil.c  ceill.c  copysign.c  copysignl.c  cos.c  coshf.c  coshl.c  cosl.c  erf.c  exp2.c  exp2l.c  expf.c  expl.c  expm1f.c  expm1l.c  fabsf.c  fdim.c  floor.c  fma.c  fmax.c  fmaxf.c  fmaxl.c  fmin.c  fmodf.c  frexp.c  frexpf.c  frexpl.c  hypotl.c  ilogb.c  ilogbf.c  (+47 more)
libc/posix/: dirent.c  fcntl.c  grp.c  pwd.c  signal.c  stdio.c  termios.c  time.c  unistd.c  unistd.h  utime.c
libc/posix/sys/: stat.c  times.c  utsname.c  wait.c
libc/pwd/: get_pwd_struct.c  get_pwd_struct_r.c  getpwnam.c  getpwuid.c  meson.build  passwd_file.c
libc/ryu/: common.h  d2s.c  d2s_full_table.h  d2s_intrinsics.h  meson.build  ryu_low_level.h
libc/setjmp/: __plibc_sigsetjmp_save_mask.c  longjmp.S  meson.build  setjmp.S  siglongjmp.c  sigsetjmp.c
libc/signal/: kill.c  meson.build  raise.c  sigaction.c  sighand.c  signal.c  sigpending.c  sigprocmask.c  sigsuspend.c
libc/stdio/: clearerr.c  ctermid.c  dirty_files.c  do_close.c  do_open.c  do_printf.c  do_scanf.c  fclose.c  fd_bitmap.c  fdopen.c  feof.c  ferror.c  fflush.c  fgetc.c  fgetpos.c  fgets.c  fileno.c  fopen.c  fprintf.c  fputc.c  fputs.c  fread.c  freopen.c  fscanf.c  fseek.c  fsetpos.c  ftell.c  fwrite.c  getc.c  getchar.c  gets.c  log_handle.c  meson.build  perror.c  printf.c  putc.c  putchar.c  puts.c  remove.c  rename.c  (+22 more)
libc/stdlib/: abort.c  abs.c  aligned_alloc.c  alloc_free.c  atexit.c  atof.c  atoi.c  atol.c  bsearch.c  calloc.c  div.c  environ.c  exit.c  free.c  getenv.c  labs.c  ldiv.c  malloc.c  mblen.c  mbstowcs.c  mbtowc.c  meson.build  qsort.c  rand.c  rand_state.c  realloc.c  realpath.c  srand.c  strtod.c  strtol.c  strtoul.c  system.c  wcstombs.c  wctomb.c
libc/string/: memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  meson.build  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strdup.c  strerror.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c  strxfrm.c
libc/sys/: meson.build
libc/sys/auxv/: getauxval.c  meson.build
libc/sys/stat/: chmod.c  fstat.c  meson.build  mkdir.c  mkfifo.c  stat.c  umask.c
libc/sys/times/: meson.build  times.c
libc/sys/utsname/: meson.build  uname.c
libc/sys/wait/: meson.build  wait.c  waitpid.c
libc/termios/: cfgetispeed.c  cfgetospeed.c  cfsetispeed.c  cfsetospeed.c  meson.build  tcdrain.c  tcflow.c  tcflush.c  tcgetattr.c  tcsetattr.c
libc/time/: asctime.c  clock.c  ctime.c  difftime.c  gmtime.c  localtime.c  meson.build  mktime.c  strftime.c  time.c
libc/unistd/: _exit.c  access.c  alarm.c  chdir.c  chown.c  close.c  cur_pid.c  dup.c  dup2.c  execl.c  execle.c  execlp.c  execv.c  execve.c  execvp.c  fd_bitmap.c  fork.c  fpathconf.c  getcwd.c  getegid.c  geteuid.c  getgid.c  getgroups.c  getlogin.c  getpgrp.c  getpid.c  getppid.c  getuid.c  isatty.c  link.c  log_handle.c  lseek.c  meson.build  pathconf.c  pause.c  pipe.c  read.c  rmdir.c  setgid.c  setpgid.c  (+9 more)
libc/utime/: meson.build  utime.c
private/: compiler.h  config-file.h  cxa.h  elf.p.h  grp.p.h  limits.p.h  pwd.p.h  rtld.h  signal.p.h  start.h  stdint.p.h  stdio.p.h  stdlib.p.h  time.p.h  unistd.p.h
private/sys/: auxv.p.h  stat.p.h
public/: assert.h  ctype.h  dirent.h  dlfcn.h  elf.h  errno.h  fcntl.h  grp.h  limits.h  locale.h  math.h  meson.build  pwd.h  setjmp.h  signal.h  stdio.h  stdlib.h  string.h  tar.h  termios.h  time.h  unistd.h  utime.h
public/bits/: NULL.h  clock_t.h  features.h  seek.h  size_t.h  ssize_t.h  types.h  wchar_t.h
public/sys/: auxv.h  stat.h  times.h  types.h  utsname.h  wait.h
rtld/: main.c  main.h  meson.build  object.c  object.h  rtld.c  rtld.lds  rtld.p.h  start.c  tls.c
rtld/start/: meson.build  start.S  start.c
test-init/: main.c  meson.build
(+10 files in other folders)
