install_headers(
    'bits/__dev_t.h',
    'bits/__gid_t.h',
    'bits/__ino_t.h',
    'bits/__mode_t.h',
    'bits/__nlink_t.h',
    'bits/__off_t.h',
    'bits/__pid_t.h',
    'bits/__sigset_t.h',
    'bits/__time_t.h',
    'bits/__uid_t.h',
    'bits/clock_t.h',
    'bits/features.h',
    'bits/FILE.h',
    'bits/intptr_t.h',
    'bits/off_t.h',
    'bits/ssize_t.h',
    'bits/whence.h',
    'sys/stat.h',
    'sys/times.h',
    'sys/types.h',
    'sys/utsname.h',
    'sys/wait.h',
    'alloca.h',
    'assert.h',
    'ctype.h',
    'dirent.h',
    'elf.h',
    'errno.h',
    'fcntl.h',
    'grp.h',
    'limits.h',
    'locale.h',
    'math.h',
    'pwd.h',
    'setjmp.h',
    'signal.h',
    'stdio.h',
    'stdlib.h',
    'string.h',
    'tar.h',
    'termios.h',
    'time.h',
    'unistd.h',
    'utime.h',
    'wchar.h',
    preserve_path: true,
)
