subdir('musl-generic-math')

libc_common = static_library(
    'c-common',
    'assert/__plibc_assert_fail.c',
    'ctype/isalnum.c',
    'ctype/isalpha.c',
    'ctype/iscntrl.c',
    'ctype/isdigit.c',
    'ctype/isgraph.c',
    'ctype/islower.c',
    'ctype/isprint.c',
    'ctype/ispunct.c',
    'ctype/isspace.c',
    'ctype/isupper.c',
    'ctype/isxdigit.c',
    'ctype/tolower.c',
    'ctype/toupper.c',
    'cxa/__cxa_atexit.c',
    'cxa/__cxa_finalize.c',
    'cxa/atexits.c',
    'errno/errno.c',
    'locale/localeconv.c',
    'locale/setlocale.c',
    'ryu/d2s.c',
    'setjmp/longjmp.S',
    'setjmp/setjmp.S',
    'signal/raise.c',
    'signal/sighand.c',
    'signal/signal.c',
    'stdio/clearerr.c',
    'stdio/dirty_files.c',
    'stdio/do_close.c',
    'stdio/fclose.c',
    'stdio/fd_bitmap.c',
    'stdio/feof.c',
    'stdio/ferror.c',
    'stdio/fflush.c',
    'stdio/fgetc.c',
    'stdio/fgetpos.c',
    'stdio/fgets.c',
    'stdio/fopen.c',
    'stdio/fprintf.c',
    'stdio/fputc.c',
    'stdio/fputs.c',
    'stdio/fread.c',
    'stdio/freopen.c',
    'stdio/fscanf.c',
    'stdio/fseek.c',
    'stdio/fsetpos.c',
    'stdio/ftell.c',
    'stdio/fwrite.c',
    'stdio/getc.c',
    'stdio/getchar.c',
    'stdio/gets.c',
    'stdio/log_handle.c',
    'stdio/perror.c',
    'stdio/printf.c',
    'stdio/putc.c',
    'stdio/putchar.c',
    'stdio/puts.c',
    'stdio/remove.c',
    'stdio/rename.c',
    'stdio/rewind.c',
    'stdio/scanf.c',
    'stdio/setbuf.c',
    'stdio/setvbuf.c',
    'stdio/snprintf.c',
    'stdio/sprintf.c',
    'stdio/sscanf.c',
    'stdio/stderr.c',
    'stdio/stdin.c',
    'stdio/stdout.c',
    'stdio/tmpfile.c',
    'stdio/tmpnam.c',
    'stdio/ungetc.c',
    'stdio/vfprintf.c',
    'stdio/vfscanf.c',
    'stdio/vprintf.c',
    'stdio/vscanf.c',
    'stdio/vsnprintf.c',
    'stdio/vsprintf.c',
    'stdio/vsscanf.c',
    'stdio/write.c',
    'stdlib/abort.c',
    'stdlib/abs.c',
    'stdlib/alloc_free.c',
    'stdlib/atexit.c',
    'stdlib/atof.c',
    'stdlib/atoi.c',
    'stdlib/atol.c',
    'stdlib/bsearch.c',
    'stdlib/calloc.c',
    'stdlib/div.c',
    'stdlib/environ.c',
    'stdlib/exit.c',
    'stdlib/free.c',
    'stdlib/getenv.c',
    'stdlib/labs.c',
    'stdlib/ldiv.c',
    'stdlib/malloc.c',
    'stdlib/mblen.c',
    'stdlib/mbstowcs.c',
    'stdlib/mbtowc.c',
    'stdlib/qsort.c',
    'stdlib/rand_state.c',
    'stdlib/rand.c',
    'stdlib/realloc.c',
    'stdlib/srand.c',
    'stdlib/strtod.c',
    'stdlib/strtol.c',
    'stdlib/strtoul.c',
    'stdlib/system.c',
    'stdlib/wcstombs.c',
    'stdlib/wctomb.c',
    'string/memchr.c',
    'string/memcmp.c',
    'string/memcpy.c',
    'string/memmove.c',
    'string/memset.c',
    'string/strcat.c',
    'string/strchr.c',
    'string/strcmp.c',
    'string/strcoll.c',
    'string/strcpy.c',
    'string/strcspn.c',
    'string/strerror.c',
    'string/strlen.c',
    'string/strncat.c',
    'string/strncmp.c',
    'string/strncpy.c',
    'string/strpbrk.c',
    'string/strrchr.c',
    'string/strspn.c',
    'string/strstr.c',
    'string/strtok.c',
    'string/strxfrm.c',
    'sys/auxv/getauxval.c',
    'time/asctime.c',
    'time/clock.c',
    'time/ctime.c',
    'time/difftime.c',
    'time/gmtime.c',
    'time/localtime.c',
    'time/mktime.c',
    'time/strftime.c',
    'time/time.c',
    'start.c',
    build_by_default: false,
    c_args: ['-ffat-lto-objects', '-ffreestanding', '-Wno-prio-ctor-dtor'],
    gnu_symbol_visibility: 'hidden',
    include_directories: inc,
    link_whole: math_lib,
    pic: true,
)
