install_headers(
    'bits/features.h',
    'bits/NULL.h',
    'bits/size_t.h',
    'bits/types.h',
    'bits/wchar_t.h',
    'sys/auxv.h',
    'assert.h',
    'ctype.h',
    'elf.h',
    'errno.h',
    'locale.h',
    'math.h',
    'setjmp.h',
    'signal.h',
    'stdio.h',
    'stdlib.h',
    'string.h',
    'time.h',
    preserve_path: true,
)
