install_headers(
    'bits/clock_t.h',
    'bits/features.h',
    'bits/NULL.h',
    'bits/seek.h',
    'bits/size_t.h',
    'bits/ssize_t.h',
    'bits/types.h',
    'bits/wchar_t.h',
    'sys/auxv.h',
    'sys/stat.h',
    'sys/times.h',
    'sys/types.h',
    'sys/utsname.h',
    'sys/wait.h',
    'assert.h',
    'ctype.h',
    'dirent.h',
    'elf.h',
    'errno.h',
    'fcntl.h',
    'grp.h',
    'limits.h',
    'locale.h',
    'math.h',
    'pwd.h',
    'setjmp.h',
    'signal.h',
    'stdio.h',
    'stdlib.h',
    'string.h',
    'tar.h',
    'termios.h',
    'time.h',
    'unistd.h',
    'utime.h',
    preserve_path: true,
)
