libc_sublibs += static_library(
    'math',
    '__cos.c',
    #'__cosdf.c',
    #'__cosl.c',
    '__expo2.c',
    #'__expo2f.c',
    #'__fpclassify.c',
    #'__fpclassifyf.c',
    #'__fpclassifyl.c',
    #'__invtrigl.c',
    #'__polevll.c',
    '__rem_pio2.c',
    '__rem_pio2_large.c',
    #'__rem_pio2f.c',
    #'__rem_pio2l.c',
    #'__signbit.c',
    #'__signbitf.c',
    #'__signbitl.c',
    '__sin.c',
    #'__sindf.c',
    #'__sinl.c',
    '__tan.c',
    #'__tandf.c',
    #'__tanl.c',
    'acos.c',
    #'acosf.c',
    #'acosh.c',
    #'acoshf.c',
    #'acoshl.c',
    #'acosl.c',
    'asin.c',
    #'asinf.c',
    #'asinh.c',
    #'asinhf.c',
    #'asinhl.c',
    #'asinl.c',
    'atan.c',
    'atan2.c',
    #'atan2f.c',
    #'atan2l.c',
    #'atanf.c',
    #'atanh.c',
    #'atanhf.c',
    #'atanhl.c',
    #'atanl.c',
    #'cbrt.c',
    #'cbrtf.c',
    #'cbrtl.c',
    'ceil.c',
    #'ceilf.c',
    #'ceill.c',
    #'copysign.c',
    #'copysignf.c',
    #'copysignl.c',
    'cos.c',
    #'cosf.c',
    'cosh.c',
    #'coshf.c',
    #'coshl.c',
    #'cosl.c',
    #'erf.c',
    #'erff.c',
    #'erfl.c',
    'exp.c',
    #'exp10.c',
    #'exp10f.c',
    #'exp10l.c',
    #'exp2.c',
    #'exp2f.c',
    #'exp2l.c',
    #'expf.c',
    #'expl.c',
    'expm1.c',
    #'expm1f.c',
    #'expm1l.c',
    'fabs.c',
    #'fabsf.c',
    #'fabsl.c',
    #'fdim.c',
    #'fdimf.c',
    #'fdiml.c',
    #'finite.c',
    #'finitef.c',
    'floor.c',
    #'floorf.c',
    #'floorl.c',
    #'fma.c',
    #'fmaf.c',
    #'fmal.c',
    #'fmax.c',
    #'fmaxf.c',
    #'fmaxl.c',
    #'fmin.c',
    #'fminf.c',
    #'fminl.c',
    'fmod.c',
    #'fmodf.c',
    #'fmodl.c',
    'frexp.c',
    #'frexpf.c',
    #'frexpl.c',
    #'hypot.c',
    #'hypotf.c',
    #'hypotl.c',
    #'ilogb.c',
    #'ilogbf.c',
    #'ilogbl.c',
    'ldexp.c',
    #'ldexpf.c',
    #'ldexpl.c',
    #'lgamma.c',
    #'lgamma_r.c',
    #'lgammaf.c',
    #'lgammaf_r.c',
    #'lgammal.c',
    #'llrint.c',
    #'llrintf.c',
    #'llrintl.c',
    #'llround.c',
    #'llroundf.c',
    #'llroundl.c',
    'log.c',
    'log10.c',
    #'log10f.c',
    #'log10l.c',
    #'log1p.c',
    #'log1pf.c',
    #'log1pl.c',
    #'log2.c',
    #'log2f.c',
    #'log2l.c',
    #'logb.c',
    #'logbf.c',
    #'logbl.c',
    #'logf.c',
    #'logl.c',
    #'lrint.c',
    #'lrintf.c',
    #'lrintl.c',
    #'lround.c',
    #'lroundf.c',
    #'lroundl.c',
    'modf.c',
    #'modff.c',
    #'modfl.c',
    #'nan.c',
    #'nanf.c',
    #'nanl.c',
    #'nearbyint.c',
    #'nearbyintf.c',
    #'nearbyintl.c',
    #'nextafter.c',
    #'nextafterf.c',
    #'nextafterl.c',
    #'nexttoward.c',
    #'nexttowardf.c',
    #'nexttowardl.c',
    'pow.c',
    #'powf.c',
    #'powl.c',
    #'remainder.c',
    #'remainderf.c',
    #'remainderl.c',
    #'remquo.c',
    #'remquof.c',
    #'remquol.c',
    #'rint.c',
    #'rintf.c',
    #'rintl.c',
    #'round.c',
    #'roundf.c',
    #'roundl.c',
    #'scalb.c',
    #'scalbf.c',
    #'scalbln.c',
    #'scalblnf.c',
    #'scalblnl.c',
    'scalbn.c',
    #'scalbnf.c',
    #'scalbnl.c',
    #'signgam.c',
    #'significand.c',
    #'significandf.c',
    'sin.c',
    #'sincos.c',
    #'sincosf.c',
    #'sincosl.c',
    #'sinf.c',
    'sinh.c',
    #'sinhf.c',
    #'sinhl.c',
    #'sinl.c',
    'sqrt.c',
    #'sqrtf.c',
    #'sqrtl.c',
    'tan.c',
    #'tanf.c',
    'tanh.c',
    #'tanhf.c',
    #'tanhl.c',
    #'tanl.c',
    #'tgamma.c',
    #'tgammaf.c',
    #'tgammal.c',
    #'trunc.c',
    #'truncf.c',
    #'truncl.c',
    build_by_default: false,
    c_args: [
        '-ffat-lto-objects',
        '-ffreestanding',
        '-Wno-unused-but-set-variable',
        '-Wno-parentheses',
        '-Wno-sign-compare'
    ],
    gnu_symbol_visibility: 'hidden',
    include_directories: inc,
    pic: true,
)
