libc_sources += files(
    'clearerr.c',
    'ctermid.c',
    'dirty_files.c',
    'do_close.c',
    'do_open.c',
    'fclose.c',
    'fdopen.c',
    'feof.c',
    'ferror.c',
    'fflush.c',
    'fgetc.c',
    'fgetpos.c',
    'fgets.c',
    'fileno.c',
    'fopen.c',
    'fprintf.c',
    'fputc.c',
    'fputs.c',
    'fread.c',
    'freopen.c',
    'fscanf.c',
    'fseek.c',
    'fsetpos.c',
    'ftell.c',
    'fwrite.c',
    'getc.c',
    'getchar.c',
    'gets.c',
    'perror.c',
    'printf.c',
    'putc.c',
    'putchar.c',
    'puts.c',
    'remove.c',
    'rename.c',
    'rewind.c',
    'scanf.c',
    'setbuf.c',
    'setvbuf.c',
    'snprintf.c',
    'sprintf.c',
    'sscanf.c',
    'stderr.c',
    'stdin.c',
    'stdout.c',
    'tmpfile.c',
    'tmpnam.c',
    'ungetc.c',
    'vfprintf.c',
    'vfscanf.c',
    'vprintf.c',
    'vscanf.c',
    'vsnprintf.c',
    'vsprintf.c',
    'vsscanf.c',
)
