libc_sources += files(
    'abort.c',
    'abs.c',
    'aligned_alloc.c',
    'alloc_free.c',
    'atexit.c',
    'atof.c',
    'atoi.c',
    'atol.c',
    'bsearch.c',
    'calloc.c',
    'div.c',
    'environ.c',
    'exit.c',
    'free.c',
    'getenv.c',
    'labs.c',
    'ldiv.c',
    'malloc.c',
    'mblen.c',
    'mbstowcs.c',
    'mbtowc.c',
    'qsort.c',
    'rand_state.c',
    'rand.c',
    'realloc.c',
    'realpath.c',
    'srand.c',
    'strtod.c',
    'strtol.c',
    'strtoul.c',
    'system.c',
    'wcstombs.c',
    'wctomb.c',
)
