libc_sources += files(
    '_exit.c',
    'access.c',
    'alarm.c',
    'chdir.c',
    'chown.c',
    'close.c',
    'dup.c',
    'dup2.c',
    'execl.c',
    'execle.c',
    'execlp.c',
    'execv.c',
    'execve.c',
    'execvp.c',
    'fork.c',
    'fpathconf.c',
    'getcwd.c',
    'getegid.c',
    'getgid.c',
    'getgroups.c',
    'getlogin.c',
    'getpgrp.c',
    'getpid.c',
    'getppid.c',
    'getuid.c',
    'isatty.c',
    'link.c',
    'lseek.c',
    'pathconf.c',
    'pause.c',
    'pipe.c',
    'read.c',
    'rmdir.c',
    'setgid.c',
    'setpgid.c',
    'setsid.c',
    'setuid.c',
    'sleep.c',
    'sysconf.c',
    'tcgetpgrp.c',
    'tcsetpgrp.c',
    'ttyname.c',
    'unlink.c',
    'write.c',
)
